--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-canvas-confetti": "^2.0.7",
     "react-dom": "^19.0.0",
     "react-use-measure": "^2.1.7",
     "sonner": "^2.0.2",
